feat: add Docker image pruning task to deploy-kiosk.yml; update Grafana and Portainer database files

--- a/ansible/deploy-kiosk.yml
+++ b/ansible/deploy-kiosk.yml
@@ -119,6 +119,14 @@
       become: yes
       register: compose_output
 
+    - name: Prune unused Docker images
+      community.docker.docker_prune:
+        images: true
+        containers: false
+        networks: false
+        volumes: false
+        filters:
+        dangling: true
 
     - name: Print Docker Compose output
       debug:
