Add contact information to slides 5-10
- Created new HTML files for slides 5 to 10.
- Each slide contains a message inviting users to reach out for more information about products, partnerships, or design services.
- Included links to the Zemfyre website and an email address for inquiries.

--- a/ansible/.env.pi
+++ b/ansible/.env.pi
@@ -11,3 +11,5 @@ GRAFANA_AUTH_DISABLE_LOGIN_FORM=true
 GRAFANA_VOLUME=./grafana/data
 GRAFANA_API_TOKEN=glsa_MzypDsGjFIYtnE0TxEg9r2pf54Xod9md_23b77887
 ADMIN_PORT=51850
+DISPLAY=:0
+DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
