feat: add notification setup role and install dependencies

--- a/ansible/deploy-kiosk.yml
+++ b/ansible/deploy-kiosk.yml
@@ -16,6 +16,10 @@
     - name: Setup kiosk environment
       include_role:
         name: kiosk
+
+    - name: Setup notification environment
+      include_role:
+        name: notify  
   
 
     - name: Ensure git is installed
