feat: update xinitrc to include dunst for notifications and adjust bashrc tasks

--- a/ansible/roles/notify/tasks/main.yml
+++ b/ansible/roles/notify/tasks/main.yml
@@ -1,34 +1,28 @@
----
 - name: Install notify-send dependency
+  become: true
   apt:
     name: libnotify-bin
     state: present
     update_cache: yes
 
-- name: Ensure dunst is installed (optional)
-  apt:
-    name: dunst
-    state: present
-
-- name: Add DISPLAY and XAUTHORITY exports to user's .bashrc for SSH sessions
-  lineinfile:
-    path: /home/zemfyre/.bashrc
-    insertafter: EOF
-    line: "{{ item }}"
-    create: yes
-    state: present
-  loop:
-    - 'export DISPLAY=:0'
-    - 'export XAUTHORITY=/home/zemfyre/.Xauthority'
+- name: Ensure ~/bin is in PATH in .bashrc
   become: true
   become_user: zemfyre
-
-- name: Ensure ~/bin is in PATH in .bashrc
   lineinfile:
     path: /home/zemfyre/.bashrc
     insertafter: EOF
     line: 'export PATH="$HOME/bin:$PATH"'
     create: yes
     state: present
+
+- name: Ensure dunst is installed
   become: true
-  become_user: zemfyre
+  apt:
+    name: dunst
+    state: present
+    update_cache: true
+
+- name: Enable lingering for user so user services run without active login session
+  become: true
+  command: loginctl enable-linger zemfyre
+
