--- a/ansible/deploy-kiosk.yml
+++ b/ansible/deploy-kiosk.yml
@@ -13,6 +13,10 @@
         grafana_port_ext: "{{ lookup('file', playbook_dir + '/.env.pi').splitlines() | select('match', '^GRAFANA_PORT_EXT=') | map('regex_replace', '^GRAFANA_PORT_EXT=(.*)$', '\\1') | list | first | default('3000') }}"
         admin_port: "{{ lookup('file', playbook_dir + '/.env.pi').splitlines() | select('match', '^ADMIN_PORT=') | map('regex_replace', '^ADMIN_PORT=(.*)$', '\\1') | list | first | default('51850') }}"
 
+    - name: Configure system
+      include_role:
+        name: system
+
     - name: Setup kiosk environment
       include_role:
         name: kiosk
