--- a/.env
+++ b/.env
@@ -10,4 +10,5 @@ GRAFANA_AUTH_ANONYMOUS_ORG_ROLE=Admin
 GRAFANA_AUTH_DISABLE_LOGIN_FORM=true
 GRAFANA_VOLUME=./grafana/data
 GRAFANA_API_TOKEN=glsa_MzypDsGjFIYtnE0TxEg9r2pf54Xod9md_23b77887
-ADMIN_PORT=51850
+ADMIN_PORT_EXT=51850
+API_PORT_EXT=53001
