--- a/ansible/.env.pi
+++ b/ansible/.env.pi
@@ -10,6 +10,7 @@ GRAFANA_AUTH_ANONYMOUS_ORG_ROLE=Admin
 GRAFANA_AUTH_DISABLE_LOGIN_FORM=true
 GRAFANA_VOLUME=./grafana/data
 GRAFANA_API_TOKEN=glsa_MzypDsGjFIYtnE0TxEg9r2pf54Xod9md_23b77887
-ADMIN_PORT=51850
 DISPLAY=:0
 DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
+API_PORT_EXT=53001
+ADMIN_PORT_EXT=51850
