--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -109,7 +109,18 @@ services:
         volumes:
           - /var/run/docker.sock:/var/run/docker.sock
         ports:
-            - "53001:3001"
+            - "${API_PORT:-53001}:3001"
+        networks:
+           - zemfyre-net
+    max31855:
+        build: 
+           context: ./max31855
+           dockerfile: Dockerfile
+        container_name: max31855_reader
+        privileged: true
+        devices:
+        - /dev/gpiomem
+        restart: unless-stopped
         networks:
            - zemfyre-net
 networks:
