feat: update API and port configurations in environment files and docker-compose

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ GRAFANA_VOLUME=./grafana/data
 GRAFANA_API_TOKEN=glsa_MzypDsGjFIYtnE0TxEg9r2pf54Xod9md_23b77887
 ADMIN_PORT_EXT=51850
 API_PORT_EXT=53001
+PORT_PORT_EXT=59000
