feat: add nginx service configuration and update nginx settings for improved routing

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 server {
-    listen 80;
-    server_name admin.local;
+    listen 53000;
+    server_name 192.168.1.30;
 
-    location / {
-        proxy_pass http://admin:80;
+    location /dashboard {
+        proxy_pass http://127.0.0.1:53000/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
