feat: update nginx configuration for improved routing and add WebSocket support; update Portainer agent signature

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,25 @@
 server {
-    listen 53000;
-    server_name 192.168.1.30;
+    listen 80;
+    server_name _;  # catch-all, can be sensor.dashboard later
 
+    # Redirect /dashboard to the Grafana dashboard
     location /dashboard {
-        proxy_pass http://127.0.0.1:53000/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
+        # Grafana container is named 'grafana' on zemfyre-net network
+        proxy_pass http://grafana:3000/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Optional: WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    # Optional: Root path redirect to /dashboard
+    location / {
+        return 302 /dashboard;
     }
 }
