--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,22 @@
+upstream grafana {
+  server grafana:3000;  # docker service name
+}
+
 server {
-    listen 80;
-    server_name _;  # catch-all, can be sensor.dashboard later
+  listen 80;
+  server_name _;
 
-    # Redirect /dashboard to the Grafana dashboard
-   location /dashboard {
-    proxy_pass http://grafana:3000/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
+  # Short URL -> Redirect to kiosk dashboard
+  location = /dashboard {
+    return 302 /grafana/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
+  }
 
+  # Proxy Grafana at /grafana/
+  location /grafana/ {
+    proxy_pass http://grafana/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-   }
-
-
-    # Optional: Root path redirect to /dashboard
-    location / {
-        return 302 /dashboard;
-    }
+  }
 }
