--- a/grafana/config/grafana.ini
+++ b/grafana/config/grafana.ini
@@ -48,7 +48,8 @@ domain = 192.168.1.30
 enforce_domain = false
 
 # The full public facing url
-root_url = %(protocol)s://%(domain)s:%(http_port)s/
+# Since Nginx is serving on port 80, tell Grafana the public URL is without :3000
+root_url = %(protocol)s://%(domain)s/
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
 serve_from_sub_path = false
