--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,20 @@
-upstream grafana {
-  server grafana:3000;  # docker service name
-}
+events { }
 
-server {
-  listen 80;
-  server_name _;
+http {
+    server {
+        listen       80;
+        server_name  localhost;
 
-  # Short URL -> Redirect to kiosk dashboard
-  location = /dashboard {
-    return 302 /grafana/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
-  }
+        # Serve files from the default web root
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
 
-  # Proxy Grafana at /grafana/
-  location /grafana/ {
-    proxy_pass http://grafana/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+        # Error pages
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
+    }
 }
