feat: update Grafana and Portainer database files; refine nginx configuration for dashboard redirection and proxy settings

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,12 +5,23 @@ upstream grafana {
 server {
     listen 80;
 
+    # Redirect root to /dashboard (optional)
     location / {
-        proxy_pass http://grafana;
+        return 302 /dashboard;
+    }
+
+    # Serve Grafana dashboard in kiosk mode via /dashboard
+    location /dashboard {
+        proxy_pass http://grafana:3000/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     error_page 500 502 503 504 /50x.html;
