--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,22 @@
 upstream grafana {
-    server grafana:3000;
+    server grafana:3000;  # matches the container name
 }
 
 server {
     listen 80;
 
-    # Redirect root to /dashboard (optional)
-    location / {
-        return 302 /dashboard;
-    }
-
-    # Serve Grafana dashboard in kiosk mode via /dashboard
+    # Redirect /dashboard to the kiosk dashboard URL
     location /dashboard {
-        proxy_pass http://grafana:3000/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
-
+        proxy_pass http://grafana/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    # Optional: Root path redirect to /dashboard
+    location / {
+        return 302 /dashboard;
     }
 
     error_page 500 502 503 504 /50x.html;
