--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  '' close;
+}
+
 upstream grafana {
     server grafana:3000;  # matches the container name
 }
@@ -7,7 +12,7 @@ server {
 
     # Redirect /dashboard to the kiosk dashboard URL
     location /dashboard {
-        proxy_pass http://grafana/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=5s&kiosk;
+        proxy_pass http://grafana/d/deqcaxn5g7vnkd/zus80lp-compact
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,6 +22,15 @@ server {
     # Optional: Root path redirect to /dashboard
     location / {
         return 302 /dashboard;
+    }
+
+    # Proxy Grafana Live WebSocket connections.
+    location /api/live/ {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+        proxy_pass http://grafana;
     }
 
     error_page 500 502 503 504 /50x.html;
