--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
-        proxy_pass http://grafana:3000;
+        proxy_pass http://grafana;
     }
 
     error_page 500 502 503 504 /50x.html;
