--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     # Redirect /dashboard to the kiosk dashboard URL
     location /dashboard {
-        proxy_pass http://grafana/d/deqcaxn5g7vnkd/zus80lp-compact;
+        proxy_pass http://grafana;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
