feat: update Grafana and Portainer database files; refine nginx configuration for dashboard redirection

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,8 @@ upstream grafana {
 
 server {
     listen 80;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
 
     # Redirect /dashboard to the kiosk dashboard URL
     location /dashboard {
@@ -19,11 +21,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Optional: Root path redirect to /dashboard
-    location / {
-        return 302 /dashboard;
-    }
-
     # Proxy Grafana Live WebSocket connections.
     location /api/live/ {
         proxy_http_version 1.1;
@@ -31,10 +28,5 @@ server {
         proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_pass http://grafana;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
     }
 }
