feat: update Grafana and Portainer database files; adjust nginx configuration for kiosk dashboard routing

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
     index index.html index.htm;
 
     # Redirect /dashboard to the kiosk dashboard URL
-    location / {
+    location /kiosk/ {
         # proxy_pass http://grafana/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
         proxy_pass http://grafana;
         proxy_set_header Host $host;
