--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,9 +13,9 @@ server {
     index index.html index.htm;
 
     # Redirect /dashboard to the kiosk dashboard URL
-    location /kiosk/ {
+    location / {
         # proxy_pass http://grafana/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
-        proxy_pass http://grafana;
+        proxy_pass http://grafana/d/deqcaxn5g7vnkd;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
