--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,32 +1,31 @@
 map $http_upgrade $connection_upgrade {
-  default upgrade;
-  '' close;
+    default upgrade;
+    '' close;
 }
 
 upstream grafana {
-    server grafana:3000;  # matches the container name
+    server grafana:3000;
 }
 
 server {
     listen 80;
-    root /usr/share/nginx/html;
-    index index.html index.htm;
 
-    # Redirect /dashboard to the kiosk dashboard URL
-    location / {
-        # proxy_pass http://grafana/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
-        proxy_pass http://grafana/d/deqcaxn5g7vnkd;
+    # Short URL for kiosk dashboard
+    location /dashboard {
+        rewrite ^/dashboard$ /d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk break;
+        proxy_pass http://grafana;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    # Optionally, keep the old /dashboard redirect if needed
-    # location /dashboard {
-    #     return 301 /dashboard/kiosk;
-    # }
 
-    # Proxy Grafana Live WebSocket connections.
+    # Root path redirect to /dashboard
+    location / {
+        return 302 /dashboard;
+    }
+
+    # WebSocket support for Grafana Live
     location /api/live/ {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
