feat: update nginx configuration for kiosk mode; modify Grafana and Portainer database files

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,19 +10,22 @@ upstream grafana {
 server {
     listen 80;
 
-    # Short URL for kiosk dashboard
-    location /dashboard {
-        rewrite ^/dashboard$ /d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk break;
-        proxy_pass http://grafana;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
+    # Short URL for kiosk mode
+    location /dashboard/ {
+        # Internal rewrite: preserve original Grafana paths for assets
+        proxy_pass http://grafana$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Root path redirect to /dashboard
-    location / {
-        return 302 /dashboard;
+    # Optionally redirect root to /dashboard
+    location = / {
+        return 302 /dashboard/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
     }
 
     # WebSocket support for Grafana Live
