--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Serve Grafana static files correctly
+    location /public/ {
+        proxy_pass http://grafana;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Optionally redirect root to /dashboard
     location = / {
         return 302 /dashboard/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
