--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,8 +15,9 @@ server {
 
     # Short URL for kiosk mode
     location /dashboard/ {
+        rewrite ^/dashboard/(.*)$ /$1 break;
         # Internal rewrite: preserve original Grafana paths for assets
-        proxy_pass http://grafana$request_uri;
+        proxy_pass http://grafana;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,6 +26,15 @@ server {
 
     # Serve Grafana static files correctly
     location /public/ {
+        proxy_pass http://grafana;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+      # Serve Grafana static files correctly
+    location /api/ {
         proxy_pass http://grafana;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
