fix: update nginx configuration for correct proxy paths and root redirection

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,10 +14,10 @@ server {
     index index.html index.htm;
 
     # Short URL for kiosk mode
-    location / {
-        # rewrite ^/dashboard/(.*)$ /$1 break;
+    location /dash/ {
+        rewrite ^/dash/(.*)$ /$1 break;
         # Internal rewrite: preserve original Grafana paths for assets
-        proxy_pass http://grafana$request_uri;
+        proxy_pass http://grafana/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -26,7 +26,7 @@ server {
 
     # Serve Grafana static files correctly
     location /public/ {
-        proxy_pass http://grafana;
+        proxy_pass http://grafana/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -35,7 +35,7 @@ server {
 
       # Serve Grafana static files correctly
     location /api/ {
-        proxy_pass http://grafana;
+        proxy_pass http://grafana/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,7 +44,7 @@ server {
 
     # Optionally redirect root to /dashboard
     location = / {
-        return 302 /d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
+        return 302 /dash/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
     }
 
     # WebSocket support for Grafana Live
@@ -53,6 +53,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
-        proxy_pass http://grafana;
+        proxy_pass http://grafana/;
     }
 }
