--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,7 +26,7 @@ server {
 
     # Serve Grafana static files correctly
     location /public/ {
-        proxy_pass http://grafana/;
+        proxy_pass http://grafana;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -35,7 +35,7 @@ server {
 
       # Serve Grafana static files correctly
     location /api/ {
-        proxy_pass http://grafana/;
+        proxy_pass http://grafana;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,7 +49,7 @@ server {
 
     # WebSocket support for Grafana Live
     location /api/live/ {
-        proxy_pass http://grafana/;
+        proxy_pass http://grafana;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
