--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,10 +14,10 @@ server {
     index index.html index.htm;
 
     # Short URL for kiosk mode
-    location /dash/ {
-        rewrite ^/dash/(.*)$ /$1 break;
+    location / {
+        #rewrite ^/dash/(.*)$ /$1 break;
         # Internal rewrite: preserve original Grafana paths for assets
-        proxy_pass http://grafana/;
+        proxy_pass http://grafana$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,7 +44,7 @@ server {
 
     # Optionally redirect root to /dashboard
     location = / {
-        return 302 /dash/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
+        return 302 /d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
     }
 
     # WebSocket support for Grafana Live
