--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,16 +25,7 @@ server {
     }
 
     # Serve Grafana static files correctly
-    location /public/ {
-        proxy_pass http://grafana;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-      # Serve Grafana static files correctly
-    location /api/ {
+    location ~ ^/(public|api)/ {
         proxy_pass http://grafana;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
