fix: update nginx configuration for WebSocket support in Grafana Live API

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,11 +39,11 @@ server {
 
     # WebSocket support for Grafana Live
     location /api/live/ {
-        proxy_pass http://grafana;
+        proxy_pass http://grafana/api/live/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
-  
     }
+
 }
