--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+       # WebSocket support for Grafana Live
+    location /api/live/ {
+        proxy_pass http://grafana;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+    }
+
     # Serve Grafana static files correctly
     location ~ ^/(public|api)/ {
         proxy_pass http://grafana;
@@ -37,13 +46,6 @@ server {
         return 302 /d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now&kiosk;
     }
 
-    # WebSocket support for Grafana Live
-    location /api/live/ {
-        proxy_pass http://grafana/api/live/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header Host $host;
-    }
+ 
 
 }
