fix: update Dockerfile to use slim-bullseye image and adjust influxdb restart policy fix: enhance WebSocket support in nginx configuration for Grafana Live API

--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -37,7 +37,7 @@ services:
     influx:
         container_name: influxdb
         image: influxdb:alpine
-        restart: unless-stopped
+        restart: always
         environment:
             - INFLUXDB_INIT_ORG=Zemfyre
             - INFLUXDB_INIT_BUCKET=ZUS80LP
