--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -5,7 +5,7 @@ services:
         ports:
         - "80:80"
         command: ["nginx", "-g", "daemon off;"]
-        restart: always
+        restart: unless-stopped
         volumes:
         - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
         networks:
