fix: remove obsolete Ansible script and enable Grafana Live WebSocket support

--- a/grafana/config/grafana.ini
+++ b/grafana/config/grafana.ini
@@ -1705,6 +1705,7 @@ forward_host_env_vars =
 
 #################################### Grafana Live ##########################################
 [live]
+enabled = true
 # max_connections to Grafana Live WebSocket endpoint per Grafana server instance. See Grafana Live docs
 # if you are planning to make it higher than default 100 since this can require some OS and infrastructure
 # tuning. 0 disables Live, -1 means unlimited connections.
