--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ server {
     }
 
     # WebSocket support for Grafana Live
-    location /api/live/ {
+    location /api/live {
         proxy_pass http://grafana;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
