--- a/grafana/config/grafana.ini
+++ b/grafana/config/grafana.ini
@@ -624,7 +624,7 @@ configurable_providers = github gitlab google generic_oauth azuread okta
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-enabled = false
+enabled = true
 
 # specify organization name that should be used for unauthenticated users
 org_name = zemfyre
