--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -9,3 +9,31 @@
     name: vncserver-x11-serviced.service
     enabled: yes
     state: started
+- name: Ensure NTPsec is installed
+  apt:
+    name: ntpsec
+    state: present
+    update_cache: yes
+
+- name: Configure NTP server
+  blockinfile:
+    path: /etc/ntpsec/ntp.conf
+    block: |
+      # Custom NTP server
+      server {{ ntp_server_ip }} iburst
+    marker: "# {mark} ANSIBLE MANAGED BLOCK"
+
+- name: Enable and start ntpsec service
+  systemd:
+    name: ntpsec
+    enabled: yes
+    state: started
+
+- name: Verify NTPsec peers
+  command: ntpq -p
+  register: ntpq_output
+  changed_when: false
+
+- name: Show NTP peers
+  debug:
+    var: ntpq_output.stdout_lines
