fix: update NTP server configuration and ensure entries exist in ntp.conf

--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,3 +1,4 @@
 [raspberrypi]
 # Replace with your actual Raspberry Pi IP address and username
 zemfyre@10.0.0.198 friendly_name="Zemfyre Pi" ansible_ssh_pass=password123
+zemfyre@192.168.1.30 friendly_name="Zemfyre Pi" ansible_ssh_pass=password123
