--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -9,19 +9,20 @@
     name: vncserver-x11-serviced.service
     enabled: yes
     state: started
+
 - name: Ensure NTPsec is installed
   apt:
     name: ntpsec
     state: present
     update_cache: yes
 
-- name: Configure NTP server
-  blockinfile:
+- name: Ensure NTP server entry exists
+  lineinfile:
     path: /etc/ntpsec/ntp.conf
-    block: |
-      # Custom NTP server
-      server {{ ntp_server_ip }} iburst
-    marker: "# {mark} ANSIBLE MANAGED BLOCK"
+    regexp: '^server\s+{{ ntp_server_ip }}\s+iburst$'
+    line: 'server {{ ntp_server_ip }} iburst'
+    state: present
+    insertafter: '^# Custom NTP server'  # optional: place after comment
 
 - name: Enable and start ntpsec service
   systemd:
