--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - "bin/ntp_win_setup_server.bat"   # Only run if this file changes
     branches:
-      - main
+      - master
 
 jobs:
   upload-bat:
