--- a/.github/workflows/update-ntp-client-script.yml
+++ b/.github/workflows/update-ntp-client-script.yml
@@ -1,4 +1,4 @@
-name: Sync NTP server BAT file to Azure Blob
+name: Sync NTP client BAT file to Azure Blob
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
       - master
 
 jobs:
-  upload-bat:
+  upload-client-bat:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -19,7 +19,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Upload BAT to Azure Blob
+      - name: Upload client BAT to Azure Blob
         run: |
           az storage blob upload \
             --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} \
