--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -4,7 +4,7 @@
   become: yes
   vars:
     repo_url: "https://github.com/dsamborschi/zemfyre-sensor.git"
-    repo_dir: "zemfyre-sensor"
+    repo_dir: "iotistic"
     kiosk_user: "zemfyre"
     ntp_server_ip: "192.168.1.100"
     nm_ip: "192.168.1.30/24"
