--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MOSQUITTO_PORT_EXT=5883
+MOSQUITTO_PORT_EXT=1883
 MOSQUITTO_WS_PORT_EXT=59001
 NODERED_PORT_EXT=51880
 INFLUXDB_PORT_EXT=58086
@@ -10,6 +10,8 @@ GRAFANA_AUTH_ANONYMOUS_ORG_ROLE=Admin
 GRAFANA_AUTH_DISABLE_LOGIN_FORM=true
 GRAFANA_VOLUME=./grafana/data
 GRAFANA_API_TOKEN=glsa_MzypDsGjFIYtnE0TxEg9r2pf54Xod9md_23b77887
-ADMIN_PORT_EXT=51850
+DISPLAY=:0
+DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
 API_PORT_EXT=53001
+ADMIN_PORT_EXT=51850
 PORT_PORT_EXT=59000
