--- a/ansible/roles/config/tasks/main.yml
+++ b/ansible/roles/config/tasks/main.yml
@@ -46,11 +46,11 @@
 #     dest: "{{ repo_dir }}/.env"
 #     mode: '0644'
 
-- name: Fix Grafana data directory ownership for playbook user
+- name: Fix Grafana data directory ownership (allow Grafana container access)
   file:
     path: "{{ repo_dir }}/grafana/data"
-    owner: "{{ kiosk_user }}"   
-    group: "{{ kiosk_user }}" 
+    owner: 472
+    group: "{{ ansible_user_gid }}"
     recurse: yes
     state: directory
   become: true
@@ -60,6 +60,7 @@
     find {{ repo_dir }}/grafana/data -type d -exec chmod 775 {} \;
     find {{ repo_dir }}/grafana/data -type f -exec chmod 664 {} \;
   become: true
+
 
 
 # - name: Debug final kiosk setup
