fix: update Grafana data directory group ownership to use kiosk_user

--- a/ansible/roles/config/tasks/main.yml
+++ b/ansible/roles/config/tasks/main.yml
@@ -50,7 +50,7 @@
   file:
     path: "{{ repo_dir }}/grafana/data"
     owner: 472
-    group: "{{ ansible_user_gid }}"
+    group: "{{ kiosk_user }}"
     recurse: yes
     state: directory
   become: true
