fix: comment out Grafana volume mounts in docker-compose and add COPY commands in Dockerfile

--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -67,10 +67,10 @@ services:
             - GF_AUTH_DISABLE_LOGIN_FORM=${GRAFANA_AUTH_DISABLE_LOGIN_FORM}
             - GF_HTTP_ALLOW_ORIGIN=*
 
-        volumes:
-            - ./grafana/data:/var/lib/grafana
-            - ./grafana/config/grafana.ini:/etc/grafana/grafana.ini
-            - ./grafana/provisioning:/etc/grafana/provisioning
+        # volumes:
+        #     - ./grafana/data:/var/lib/grafana
+        #     - ./grafana/config/grafana.ini:/etc/grafana/grafana.ini
+        #     - ./grafana/provisioning:/etc/grafana/provisioning
         ports:
             - "${GRAFANA_PORT_EXT:-53000}:3000"
         networks:
