--- a/ansible/roles/config/tasks/main.yml
+++ b/ansible/roles/config/tasks/main.yml
@@ -46,20 +46,20 @@
 #     dest: "{{ repo_dir }}/.env"
 #     mode: '0644'
 
-- name: Fix Grafana data directory ownership (allow Grafana container access)
-  file:
-    path: "{{ repo_dir }}/grafana/data"
-    owner: 472
-    group: "{{ kiosk_user }}"
-    recurse: yes
-    state: directory
-  become: true
+# - name: Fix Grafana data directory ownership (allow Grafana container access)
+#   file:
+#     path: "{{ repo_dir }}/grafana/data"
+#     owner: 472
+#     group: "{{ kiosk_user }}"
+#     recurse: yes
+#     state: directory
+#   become: true
 
-- name: Set directories to 775 and files to 664 in Grafana data
-  shell: |
-    find {{ repo_dir }}/grafana/data -type d -exec chmod 775 {} \;
-    find {{ repo_dir }}/grafana/data -type f -exec chmod 664 {} \;
-  become: true
+# - name: Set directories to 775 and files to 664 in Grafana data
+#   shell: |
+#     find {{ repo_dir }}/grafana/data -type d -exec chmod 775 {} \;
+#     find {{ repo_dir }}/grafana/data -type f -exec chmod 664 {} \;
+#   become: true
 
 
 
