fix: set default values for Mosquitto port environment variables

--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -14,8 +14,8 @@ services:
         image: eclipse-mosquitto
         restart: always
         ports:
-          - "${MOSQUITTO_PORT_EXT}:1883"
-          - "${MOSQUITTO_WS_PORT_EXT}:9001"
+          - "${MOSQUITTO_PORT_EXT:-1883}:1883"
+          - "${MOSQUITTO_WS_PORT_EXT:-59001}:9001"
         volumes:
           - ./mosquitto/config:/mosquitto/config/
         networks:
