--- a/grafana/config/grafana.ini
+++ b/grafana/config/grafana.ini
@@ -1078,7 +1078,7 @@ facility =
 tag =
 
 [log.frontend]
-# Should Faro javascript agent be initialized
+# Should Faro javascript agent be initializedERT
 enabled = false
 
 # Custom HTTP endpoint to send events to. Default will log the events to stdout.
