fix: correct typo in syslog tag comment in grafana configuration

--- a/grafana/config/grafana.ini
+++ b/grafana/config/grafana.ini
@@ -1074,7 +1074,7 @@ address =
 # Syslog facility. user, daemon and local0 through local7 are valid.
 facility =
 
-# Syslog tag. By default, the process' argv[0] is used.tyr
+# Syslog tag. By default, the process' argv[0] is used.tyrsd
 tag =
 
 [log.frontend]
