--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -86,6 +86,7 @@ services:
            - zemfyre-net
 
     admin:
+        image: iotistic/zemfyre-admin:latest
         build:
             context: ./admin
             dockerfile: Dockerfile
